--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Layout from '../layouts/Layout.astro';
 				<label for="short-url" class="block text-sm font-medium text-gray-200">Your Short URL</label>
 				<div class="mt-1 flex rounded-md shadow-sm">
 					<div class="relative flex items-stretch flex-grow focus-within:z-10">
-						<input type="text" id="short-url" name="short-url" class="focus:ring-indigo-500 focus:border-indigo-500 block w-full rounded-none rounded-l-md sm:text-sm border-gray-300" readonly />
+						<input type="text" id="short-url" name="short-url" class="focus:ring-indigo-500 focus:border-indigo-500 block w-full rounded-none rounded-l-md sm:text-sm  text-black px-3 py-2" readonly />
 					</div>
 					<button id="copy-button" class="ml-3 inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
 						<img src="/copy.svg" alt="Copy" class="h-5 w-5 mr-2" /> Copy
